[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features=["blocking"]}
